Updated the OpenAPI Document and integrated the generated classes. - Generated Controllers are now used and are calling the old controllers. This might be changed in the future, but the file response for /converter/full endpoint requires headers to be set, which should be separated from the business logic. - DTOs are now also generated. The ConverterTypeDto is new and is used to validate requests. - The mappers have been updated and the creation of Converters does not use the DTOs anymore. They are now created from IStructures which were created by a new mapper.